Restructuring the folder and notebook structure, reorganizing, and introducing the Clouds notebook.

--- a/notebooks/precip.ipynb
+++ b/notebooks/precip.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# GWDST\n",
-    "##### Distributions and exploration of gravity wave spectra and relevant physical quantities: clouds, rain, and heating"
+    "# Precipitation Analysis\n",
+    "\n",
+    "##### A GWDST project to analyze and visualize precipitation features relevant to gravity waves, notably in terms of variability and extreme analysis."
    ]
   },
   {
@@ -250,11 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "## Precipitation\n",
-    "\n",
-    "### Distributions"
+    "## Distributions"
    ]
   },
   {
@@ -320,10 +317,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Percentile analysis\n",
+    "## Percentile analysis\n",
     "Here we will investigate the fractional contribution of our more extreme rain events.\n",
     "\n",
-    "#### PRECT"
+    "### PRECT"
    ]
   },
   {
@@ -371,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### PRECL"
+    "### PRECL"
    ]
   },
   {
@@ -412,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### PRECC"
+    "### PRECC"
    ]
   },
   {
@@ -453,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Non-zero analysis\n",
+    "#### Non-zero analysis\n",
     "Really only showed any difference in PRECC. Excluded elsewhere."
    ]
   },
@@ -495,9 +492,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Maps\n",
+    "## Maps\n",
     "\n",
-    "#### Initial Maps"
+    "### Initial Maps"
    ]
   },
   {
@@ -556,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Contribution of PRECC to PRECT"
+    "### Contribution of PRECC to PRECT"
    ]
   },
   {
@@ -622,7 +619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Locations of high-intensity events"
+    "### Locations of high-intensity events"
    ]
   },
   {
