Worked on 2-D heating analysis.

--- a/notebooks/clouds.ipynb
+++ b/notebooks/clouds.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Clouds\n",
     "\n",
-    "##### A GWDST project to analyze and visualize modeled cloud features, particularly variability and extremes."
+    "##### A GWDST project to analyze and visualize modeled cloud features, particularly variability and extremes.\n",
+    "\n",
+    "### Input and data"
    ]
   },
   {
@@ -249,6 +251,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -278,7 +281,7 @@
     "    pconvt.where(pconvt > 0).plot.hist(ax=ax, log=True, histtype='step', linewidth=2, label='PCONVT')\n",
     "    \n",
     "    ax.legend()\n",
-    "    ax.set_title('Distribution of Nonzero Cloud Height Fields')\n",
+    "    ax.set_title('Distribution of Nonzero Cloud Height Fields, 20' + u'\\N{DEGREE SIGN}' + 'S -- 20' + u'\\N{DEGREE SIGN}' + 'N, July 2002')\n",
     "    ax.set_xlabel('Cloud Top Height [m]')\n",
     "    \n",
     "    plt.tight_layout()    \n",
