--- a/notebooks/precip.ipynb
+++ b/notebooks/precip.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Precipitation Analysis\n",
     "\n",
-    "##### A GWDST project to analyze and visualize precipitation features relevant to gravity waves, notably in terms of variability and extreme analysis."
+    "##### A GWDST project to analyze and visualize precipitation features relevant to gravity waves, notably in terms of variability and extreme analysis.\n",
+    "\n",
+    "### Input and data"
    ]
   },
   {
@@ -301,7 +303,7 @@
     "    precc.plot.hist(ax=ax, log=True, bins=np.arange(0, precc.values.max().round()+1, 0.5), histtype='step', linewidth=2, label='PRECC')\n",
     "    ax.legend()\n",
     "    ax.set_xlabel('Rain Rate [mm/hr]')\n",
-    "    ax.set_title('Distribution of Precip Fields, 20'+u'\\N{DEGREE SIGN}'+'S -- 20'+u'\\N{DEGREE SIGN}'+'N, July 2002')\n",
+    "    ax.set_title('Distribution of Precip Fields, 20' + u'\\N{DEGREE SIGN}' + 'S -- 20' + u'\\N{DEGREE SIGN}' + 'N, July 2002')\n",
     "\n",
     "    plt.tight_layout()\n",
     "    f.savefig('../figures/precip/dist_PREC.png')"
