--- a/notebooks/clouds.ipynb
+++ b/notebooks/clouds.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -47,23 +47,23 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3>Client</h3>\n",
        "<ul>\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:55557\n",
-       "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787' target='_blank'>http://127.0.0.1:8787</a>\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:46561\n",
+       "  <li><b>Dashboard: </b><a href='http://127.0.0.1:36647' target='_blank'>http://127.0.0.1:36647</a>\n",
        "</ul>\n",
        "</td>\n",
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3>Cluster</h3>\n",
        "<ul>\n",
-       "  <li><b>Workers: </b>72</li>\n",
-       "  <li><b>Cores: </b>72</li>\n",
-       "  <li><b>Memory: </b>40.38 GB</li>\n",
+       "  <li><b>Workers: </b>8</li>\n",
+       "  <li><b>Cores: </b>8</li>\n",
+       "  <li><b>Memory: </b>134.92 GB</li>\n",
        "</ul>\n",
        "</td>\n",
        "</tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "<Client: scheduler='tcp://127.0.0.1:55557' processes=72 cores=72>"
+       "<Client: scheduler='tcp://127.0.0.1:46561' processes=8 cores=8>"
       ]
      },
      "execution_count": 2,
@@ -78,20 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:          (ilev: 71, lat: 42, lev: 70, lon: 288, nbnd: 2, time: 744)\n",
+       "Dimensions:          (ilev: 71, lat: 42, lev: 70, lon: 288, nbnd: 2, time: 720)\n",
        "Coordinates:\n",
        "  * lat              (lat) float64 -19.32 -18.38 -17.43 -16.49 -15.55 -14.61 ...\n",
        "  * lon              (lon) float64 0.0 1.25 2.5 3.75 5.0 6.25 7.5 8.75 10.0 ...\n",
        "  * lev              (lev) float64 5.96e-06 9.827e-06 1.62e-05 2.671e-05 ...\n",
        "  * ilev             (ilev) float64 4.5e-06 7.42e-06 1.223e-05 2.017e-05 ...\n",
-       "  * time             (time) datetime64[ns] 2002-07-01 2002-07-01T00:59:59 ...\n",
+       "  * time             (time) datetime64[ns] 2002-06-01 2002-06-01T00:59:59 ...\n",
        "Dimensions without coordinates: nbnd\n",
        "Data variables:\n",
        "    gw               (time, lat) float64 0.01552 0.01561 0.01569 0.01577 ...\n",
@@ -100,29 +100,29 @@
        "    P0               (time) float64 1e+05 1e+05 1e+05 1e+05 1e+05 1e+05 ...\n",
        "    hyai             (time, ilev) float64 4.5e-09 7.42e-09 1.223e-08 ...\n",
        "    hybi             (time, ilev) float64 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
-       "    date             (time) int32 20020701 20020701 20020701 20020701 ...\n",
+       "    date             (time) int32 20020601 20020601 20020601 20020601 ...\n",
        "    datesec          (time) int32 0 3600 7200 10800 14400 18000 21600 25200 ...\n",
-       "    time_bnds        (time, nbnd) float64 46.96 47.0 47.0 47.04 47.04 47.08 ...\n",
+       "    time_bnds        (time, nbnd) float64 16.96 17.0 17.0 17.04 17.04 17.08 ...\n",
        "    date_written     (time) |S8 b'07/20/17' b'07/20/17' b'07/20/17' ...\n",
-       "    time_written     (time) |S8 b'14:13:27' b'14:13:31' b'14:13:35' ...\n",
+       "    time_written     (time) |S8 b'13:27:24' b'13:27:28' b'13:27:31' ...\n",
        "    ndbase           (time) int64 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...\n",
        "    nsbase           (time) int64 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...\n",
        "    nbdate           (time) int64 20020515 20020515 20020515 20020515 ...\n",
        "    nbsec            (time) int64 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ...\n",
        "    mdt              (time) int64 1800 1800 1800 1800 1800 1800 1800 1800 ...\n",
-       "    ndcur            (time) int32 47 47 47 47 47 47 47 47 47 47 47 47 47 47 ...\n",
+       "    ndcur            (time) int32 17 17 17 17 17 17 17 17 17 17 17 17 17 17 ...\n",
        "    nscur            (time) int32 0 3600 7200 10800 14400 18000 21600 25200 ...\n",
-       "    co2vmr           (time) float64 0.000372 0.000372 0.000372 0.000372 ...\n",
-       "    ch4vmr           (time) float64 1.771e-06 1.771e-06 1.771e-06 1.771e-06 ...\n",
+       "    co2vmr           (time) float64 0.0003732 0.0003732 0.0003732 0.0003732 ...\n",
+       "    ch4vmr           (time) float64 1.773e-06 1.773e-06 1.773e-06 1.773e-06 ...\n",
        "    n2ovmr           (time) float64 3.17e-07 3.17e-07 3.17e-07 3.17e-07 ...\n",
-       "    f11vmr           (time) float64 2.575e-10 2.575e-10 2.575e-10 2.575e-10 ...\n",
-       "    f12vmr           (time) float64 5.434e-10 5.434e-10 5.434e-10 5.434e-10 ...\n",
+       "    f11vmr           (time) float64 2.576e-10 2.576e-10 2.576e-10 2.576e-10 ...\n",
+       "    f12vmr           (time) float64 5.435e-10 5.435e-10 5.435e-10 5.435e-10 ...\n",
        "    sol_tsi          (time) float64 -1.0 -1.0 -1.0 -1.0 -1.0 -1.0 -1.0 -1.0 ...\n",
-       "    f107             (time) float64 152.3 152.3 152.3 152.3 152.3 152.3 ...\n",
-       "    f107a            (time) float64 168.0 168.0 168.0 168.0 168.0 168.0 ...\n",
-       "    kp               (time) float64 2.713 2.713 2.713 2.713 2.713 2.713 ...\n",
-       "    ap               (time) float64 13.5 13.5 13.5 13.5 13.5 13.5 13.5 13.5 ...\n",
-       "    nsteph           (time) int32 2256 2258 2260 2262 2264 2266 2268 2270 ...\n",
+       "    f107             (time) float64 183.9 183.9 183.9 183.9 183.9 183.9 ...\n",
+       "    f107a            (time) float64 164.4 164.4 164.4 164.4 164.4 164.4 ...\n",
+       "    kp               (time) float64 0.825 0.825 0.825 0.825 0.825 0.825 ...\n",
+       "    ap               (time) float64 3.5 3.5 3.5 3.5 3.5 3.5 3.5 3.5 3.5 3.5 ...\n",
+       "    nsteph           (time) int32 816 818 820 822 824 826 828 830 832 834 ...\n",
        "    BTAUXSn01        (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
        "    BTAUXSn02        (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
        "    BTAUXSn03        (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
@@ -253,16 +253,16 @@
        "    BTAUYSp32        (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
        "    CLOUDFRAC_CLUBB  (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
        "    MPDT             (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
-       "    OMEGA            (time, lev, lat, lon) float32 -6.18894e-09 -5.17793e-09 ...\n",
-       "    PCONVT           (time, lat, lon) float32 102118.0 102067.0 102008.0 ...\n",
+       "    OMEGA            (time, lev, lat, lon) float32 1.21788e-08 1.62709e-08 ...\n",
+       "    PCONVT           (time, lat, lon) float32 101707.0 101675.0 101647.0 ...\n",
        "    PRECC            (time, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
-       "    PRECL            (time, lat, lon) float32 7.91e-10 2.29505e-10 ...\n",
-       "    PRECT            (time, lat, lon) float32 7.91e-10 2.29505e-10 ...\n",
-       "    PS               (time, lat, lon) float32 102118.0 102067.0 102008.0 ...\n",
+       "    PRECL            (time, lat, lon) float32 7.9335e-10 2.32454e-10 ...\n",
+       "    PRECT            (time, lat, lon) float32 7.9335e-10 2.32454e-10 ...\n",
+       "    PS               (time, lat, lon) float32 101707.0 101675.0 101647.0 ...\n",
        "    STEND_CLUBB      (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
-       "    T                (time, lev, lat, lon) float32 629.587 627.857 626.355 ...\n",
-       "    U                (time, lev, lat, lon) float32 36.0273 41.8635 45.7809 ...\n",
-       "    V                (time, lev, lat, lon) float32 -60.8477 -58.2628 ...\n",
+       "    T                (time, lev, lat, lon) float32 637.605 636.288 635.518 ...\n",
+       "    U                (time, lev, lat, lon) float32 4.33354 6.54488 5.45789 ...\n",
+       "    V                (time, lev, lat, lon) float32 -47.2095 -51.2462 ...\n",
        "    ZMDT             (time, lev, lat, lon) float32 0.0 0.0 0.0 0.0 0.0 0.0 ...\n",
        "Attributes:\n",
        "    Conventions:       CF-1.0\n",
@@ -278,13 +278,15 @@
        "    time_period_freq:  hour_1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds = xr.open_mfdataset('/glade/scratch/mcamron/archive/f.c54120.FWscHIST.f09_f09.gwdst/atm/hist/f.c54120.FWscHIST.f09_f09.gwdst.cam.h1.2002-07-*.nc')\n",
+    "#ds = xr.open_mfdataset('/glade/scratch/mcamron/archive/f.c54120.FWscHIST.f09_f09.gwdst/atm/hist/f.c54120.FWscHIST.f09_f09.gwdst.cam.h1.2002-07-*.nc')\n",
+    "ds = xr.open_mfdataset('/data/clouds/drew/waccm/gwdst/f.c54120.FWscHIST.f09_f09.gwdst.cam.h1.2002-06-*-00000.nc', autoclose=True)\n",
+    "\n",
     "ds = ds.sel(lat=slice(-20,20))\n",
     "ds"
    ]
