--- a/notebooks/heating.ipynb
+++ b/notebooks/heating.ipynb
@@ -13,25 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "#import warnings\n",
-    "#warnings.filterwarnings('ignore')\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import xarray as xr\n",
-    "import xarray.ufuncs as xu\n",
+    "#import xarray as xr\n",
+    "#import xarray.ufuncs as xu\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import cartopy.crs as ccrs\n",
-    "from dask.distributed import Client\n",
+    "#import cartopy.crs as ccrs\n",
+    "#from dask.distributed import Client\n",
     "\n",
     "sns.set(context='talk', palette='colorblind')"
    ]
@@ -914,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
