Updated qsub script to allocate more resources to allow production of dist with June.

--- a/notebooks/waves.ipynb
+++ b/notebooks/waves.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Check ../scripts/waves.py for most recent analysis!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -132,6 +139,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
